Fixed broken mythbusters commands, added cmon command.

--- a/DiscordWeatherBot/DiscordWeatherBot.csproj
+++ b/DiscordWeatherBot/DiscordWeatherBot.csproj
@@ -122,6 +122,9 @@
     <Content Include="Images\busted9.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\cmon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\confirmed1.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
