Reworked images commands, added another cmon image, added mars command.

--- a/DiscordWeatherBot/DiscordWeatherBot.csproj
+++ b/DiscordWeatherBot/DiscordWeatherBot.csproj
@@ -86,6 +86,9 @@
     </None>
     <None Include="App.config" />
     <EmbeddedResource Include="discord.key" />
+    <Content Include="Images\cmon2.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +153,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\confirmed9.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\mars.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\plausible1.jpg">
