--- a/DiscordWeatherBot/DiscordWeatherBot.csproj
+++ b/DiscordWeatherBot/DiscordWeatherBot.csproj
@@ -128,6 +128,9 @@
     <Content Include="Images\cmon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\cmon3.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\confirmed1.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
